# FRANK

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO  TODO.md  a.out  any.cpp  any.h  ara.cu  batch.cpp  batch.h  batch_gpu.cu  batch_rsvd.cpp  batch_rsvd.cu  batch_rsvd.h  batch_rsvd_gpu.cu  block.cpp  block.h  block_lu.cpp  block_lu_mpi.cpp  block_ptr.cpp  block_ptr.h  block_qr.cpp  blr_lu.cpp  blr_qr.cpp  boost_any_wrapper.h  build_tree.cpp  dense.cpp  dense.h  driver_single_core_gsl.c  errors.cpp  errors.h  functions.cpp  functions.h  gpu.cu  grid.h  gsl_wrapper.h  (+33 more)
.github/workflows/: build_and_test_hosted.yml
cmake/: Boost_CMakeLists.cmake.in  Boost_download.cmake.in  CBLAS_download.cmake.in  GTest_download.cmake.in  LAPACKE_download.cmake.in  YOMM2_download.cmake.in  add_external.cmake  find_or_download.cmake  find_or_download_package.cmake  googletest_download.cmake  nlohmann_json_download.cmake.in  starpu_download.cmake.in  stars-h_download.cmake.in  starsh_download.cmake.in  yomm11_download.cmake  yomm2_download.cmake
docs/: CMakeLists.txt
docs/pages/: extending_FRANK.md  extending_hicma.md  h2_matrix.md  hierarchical_matrix.md  open_multi_methods.md
dyn_type_test/: dyn_overload.cpp
examples/: CMakeLists.txt  Hmatrix_to_json.cpp  blocked_householder_blr_qr.cpp  blocked_mgs_blr_qr.cpp  blocked_mgs_h_qr.cpp  blr-lu-exp3d.cpp  blr_compress.cpp  forkjoin_blocked_householder_blr_qr.cpp  forkjoin_blocked_mgs_blr_qr.cpp  forkjoin_tiled_householder_blr_qr.cpp  h_lu.cpp  kernel-test.cpp  lr_add.cpp  rsvd_gpu.cu  starpu.cpp  starsh_test.cpp  taskbased_tiled_householder_blr_qr.cpp  tiled_householder_blr_qr.cpp  tiled_householder_dense_qr.cpp  tlr_qr.cpp
include/FRANK/: FRANK.h  classes.h  definitions.h  functions.h  operations.h  util.h
include/FRANK/classes/: dense.h  empty.h  hierarchical.h  low_rank.h  matrix.h  matrix_proxy.h
include/FRANK/operations/: BLAS.h  LAPACK.h  arithmetic.h  misc.h  randomized_factorizations.h
include/FRANK/util/: experiment_setup.h  geometry_file.h  get_memory_usage.h  global_key_value.h  initialize.h  l2_error.h  omm_error_handler.h  print.h  timer.h
include/hicma/: any.h  classes.h  definitions.h  dense.h  functions.h  hicma.h  hierarchical.h  low_rank.h  low_rank_shared.h  node.h  node_proxy.h  operations.h  uniform_hierarchical.h  util.h
include/hicma/classes/: basis.h  data_handler.h  dense.h  dense_view.h  empty.h  hierarchical.h  (+12 more)
private_include/hicma_private/: starpu_data_handler.h
python/: .gitignore  blr_lu.py  h_lu.py
python/FRANK/: dense.py  functions.py  hierarchical.py  low_rank.py  node.py  print.py  timer.py
python/decomposition/: gauss_jordan.py  lu.py  qr.py  svd.py
python/hicma/: dense.py  functions.py  hierarchical.py  id.py  low_rank.py  node.py  print.py  timer.py
python_implementation/benchmark/: sparse_time
python_implementation/decomposition/: id.py  lu.py
single_core_gsl_code/: driver_single_core_gsl.c
src/: CMakeLists.txt  any.cpp  dense.cpp  functions.cpp  gemm.cpp  getrf.cpp  hierarchical.cpp  low_rank.cpp  low_rank_shared.cpp  node.cpp  node_proxy.cpp  trsm.cpp  uniform_hierarchical.cpp
src/classes/: CMakeLists.txt  basis.cpp  data_handler.cpp  dense.cpp  dense_view.cpp  hierarchical.cpp  index_range.cpp  low_rank.cpp  low_rank_shared.cpp  low_rank_view.cpp  matrix_proxy.cpp  nested_basis.cpp  no_copy_split.cpp  node.cpp  node_proxy.cpp  shared_basis.cpp  uniform_hierarchical.cpp
src/classes/initialization_helpers/: basis_copy_tracker.cpp  basis_tracker.cpp  cluster_tree.cpp  index_range.cpp  matrix_initializer.cpp  matrix_initializer_block.cpp  matrix_initializer_file.cpp  matrix_initializer_function.cpp  matrix_initializer_kernel.cpp  matrix_initializer_starsh_exponential.cpp
src/classes/initialization_helpers/matrix_kernels/: arange_kernel.cpp  cauchy2d_kernel.cpp  helmholtznd_kernel.cpp  identity_kernel.cpp  laplacend_kernel.cpp  matrix_kernel.cpp  parameterized_kernel.cpp  random_normal_kernel.cpp  random_uniform_kernel.cpp  zero_kernel.cpp
src/gpu_batch/: CMakeLists.txt  batch.cpp  batch_gpu.cu
src/operations/: CMakeLists.txt  gemm.cpp  geqp3.cpp  geqrt.cpp  get_dim.cpp  getrf.cpp  id.cpp  larfb.cpp  latms.cpp  misc.cpp  norm.cpp  qr.cpp  tpmqrt.cpp  tpqrt.cpp  transpose.cpp  trmm.cpp  trsm.cpp
src/operations/BLAS/: gemm.cpp  trmm.cpp  trsm.cpp
src/operations/LAPACK/: geqp3.cpp  geqrt.cpp  getrf.cpp  id.cpp  larfb.cpp  latms.cpp  mgs_qr.cpp  qr.cpp  rq.cpp  svd.cpp  tpmqrt.cpp  tpqrt.cpp
src/operations/arithmetic/: addition.cpp  multiplication.cpp  subtraction.cpp
src/operations/misc/: addition.cpp  get_dim.cpp  misc.cpp  morton_index.cpp  norm.cpp  recompress.cpp  resize.cpp  transpose.cpp
src/operations/randomized/: rid.cpp  rsvd.cpp
src/starpu/: CMakeLists.txt  data_handler.cpp
src/util/: CMakeLists.txt  counter.cpp  experiment_setup.cpp  geometry_file.cpp  get_memory_usage.cpp  get_template_type.cpp  global_key_value.cpp  initialize.cpp  l2_error.cpp  omm_error_handler.cpp  pre_scheduler.cpp  print.cpp  timer.cpp
test/: CMakeLists.txt  block_lu.cpp  block_qr.cpp  blocked_householder_blr_qr.cpp  blocked_mgs_blr_qr.cpp  blocked_mgs_h_qr.cpp  blr-lu-exp3d.cpp  blr_compress.cpp  blr_fixed_acc_test.cpp  blr_fixed_rank_test.cpp  blr_lu.cpp  blr_qr.cpp  catch.hpp  dense_arithmetic_test.cpp  dense_gemm_test.cpp  dense_getrf_test.cpp  dense_id_test.cpp  dense_qr_test.cpp  dense_svd_test.cpp  dense_test.cpp  dense_trsm_test.cpp  forkjoin_blocked_mgs_blr_qr.cpp  forkjoin_blr_qr.cpp  forkjoin_tiled_householder_blr_qr.cpp  forkjoin_tlr_qr.cpp  gemm_gpu.cu  gemm_test.cpp  googletest_download.cmake  h_lu.cpp  h_lu_test.cpp  h_qr.cpp  hicmat-matern.cpp  hierarchical_fixed_acc_constructor_test.cpp  hierarchical_fixed_acc_test.cpp  hierarchical_fixed_rank_constructor_test.cpp  hierarchical_fixed_rank_test.cpp  hierarchical_test.cpp  id_test.cpp  job.sh  kernel-test.cpp  (+22 more)
test/test_data/: simple_matrix.txt
testing/: basic_op_test.cpp  dyn_overload.cpp  dyn_value_semantics.cpp  type_test.cpp  variant.cpp
visualization/: visualization.py
(+109 files in other folders)
